--- a/src/assets/components/GridImages/GridImages.module.css
+++ b/src/assets/components/GridImages/GridImages.module.css
@@ -1,16 +1,16 @@
 .container{
-    min-width: 100vw;
     min-height: 100vh;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+   display: grid;
+   padding: 40px;
+   justify-content: center;
 }
 .container > h2{
     font-size: 2rem;
     font-family: poppins, sans-serif;
     color: #000;
     font-weight: 500;
+    justify-self: start;
+    margin-bottom: 20px;
 }
 .container > h2 > span{
     color: #FFC300;
@@ -18,7 +18,7 @@
 
 .gridContainer1{
     display: grid;
-    grid-template-columns: 300px 300px 300px;
+    grid-template-columns: 350px 350px 300px;
     gap: 20px;
 }
 .img{
@@ -27,25 +27,31 @@
     object-position: center;
     margin: 0px;
     padding: 0px;
+    transition: all .4s ease;
 }
-.imgDeitada{
-    width: 620px;
-    height: 260px;
+.img:hover{
+    transform: scale(1.01);
+    box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.4);
+}
+.img1,
+.img2{
+    width: 720px;
+    height: 370px;
 }
 .img2{
     grid-row: 2/3;
 }
 .imgEmPe{
-    width: 300px;
+    width: 350px;
 }
 .img3{
     grid-column: 3/4;
     grid-row: 1/3;
-    height: 540px
+    height: 760px
 }
 .gridContainer2{
     display: grid;
-    grid-template-columns: 300px 300px 300px;
+    grid-template-columns: 350px 350px 350px;
     gap: 20px;
 }
 .img4{
@@ -53,8 +59,8 @@
     grid-row: 4/6;
 }
 .imgQua{
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
     grid-row: 4/5;
 }
 .img5{
@@ -65,10 +71,12 @@
 }
 .img4{
     grid-row: 4/6;
-    height: 580px;
+    height: 720px;
+    width: 350px;
 }
 .img7{
     grid-column: 2/-1;
     grid-row: 5/6;
-    width: 620px;
+    width: 720px;
+    height: 350px;
 }
