--- a/src/assets/components/ButtonOrca/Button.module.css
+++ b/src/assets/components/ButtonOrca/Button.module.css
@@ -1,4 +1,5 @@
 .btn{
+    font-family: poppins, sans-serif;
     color: #180E00;
     text-decoration: none;
     font-size: 1.125rem;
@@ -11,9 +12,9 @@
     border-radius: 10px;
     padding: 10px 30px;
     gap: 20px;
+    transition: all .4s ease-in-out;
 }
 .btn:hover{
-    transition: all .4s ease-in-out;
     background: linear-gradient( #FF9000, #FFC300);
 }
 .btn img{
