--- a/src/assets/components/GridImages/GridImages.module.css
+++ b/src/assets/components/GridImages/GridImages.module.css
@@ -1,5 +1,5 @@
 .container{
-    min-height: 100vh;
+    height:auto;
    display: grid;
    padding: 40px;
    justify-content: center;
@@ -53,6 +53,7 @@
     display: grid;
     grid-template-columns: 350px 350px 350px;
     gap: 20px;
+    margin-bottom: 40px;
 }
 .img4{
     grid-column: 1/2;
