trabalhei na parte responsiva do site

--- a/src/assets/components/ButtonOrca/Button.module.css
+++ b/src/assets/components/ButtonOrca/Button.module.css
@@ -21,3 +21,23 @@
     color: #180E00;
     height: 30px;
 }
+@media(max-width: 550px){
+    .btn{
+        font-size: 1rem;
+        padding: 10px 20px;
+    }
+    .btn img{
+        height: 20px;
+    }
+
+}
+@media(max-width: 400px){
+    .btn{
+        font-size: .875rem;
+        padding: 5px 15px;
+    }
+    .btn img{
+        height: 15px;
+    }
+
+}
