--- a/src/assets/components/Carrossel/Carrossel.module.css
+++ b/src/assets/components/Carrossel/Carrossel.module.css
@@ -1,8 +1,8 @@
-.Container{
+.container{
     min-height: 100vh;
     position: relative;
 }
-.Container > h2{
+.container > h1{
     font-family: 'poppins';
     font-size: 2rem;
     font-weight: 500;
@@ -87,3 +87,55 @@
         transform: translateY(0px);
     }
 }
+@media(max-width: 900px){
+    .content > p{
+        width: 400px;
+    }
+}
+@media(max-width: 700px){
+    .content{
+        filter: brightness(1) !important;
+        align-self: center;
+        padding: 50px 70px;
+    }
+    .content > p{
+        width: 300px;
+        font-size: 0.875rem;
+        letter-spacing: 0px;
+    }
+    .carrosselContainer button i{
+        font-size: 1.5rem;
+    }
+
+}
+@media(max-width: 550px){
+    .container h1{
+        font-size: 1.5rem;
+    }
+    .content{
+        padding: 20px 50px;
+    }
+    .content > p{
+        font-size: .875rem;
+    }
+    .carrosselContainer button i{
+        font-size: 1rem;
+    }
+}
+@media(max-width: 400px){
+    .container h1{
+        font-size: 1.2rem;
+    }
+    .content{
+        padding: 50px 70px;
+    }
+    .content > p{
+        font-size: .75rem;
+        width: 270px;
+    }
+    .carrosselContainer button i{
+        font-size: 1rem;
+    }
+
+}
+
