--- a/src/assets/components/GridImages/GridImages.module.css
+++ b/src/assets/components/GridImages/GridImages.module.css
@@ -4,7 +4,7 @@
    padding: 40px;
    justify-content: center;
 }
-.container > h2{
+.container > h1{
     font-size: 2rem;
     font-family: poppins, sans-serif;
     color: #000;
@@ -12,7 +12,7 @@
     justify-self: start;
     margin-bottom: 20px;
 }
-.container > h2 > span{
+.container > h1 > span{
     color: #FFC300;
 }
 
@@ -59,6 +59,11 @@
     grid-column: 1/2;
     grid-row: 4/6;
 }
+.img4{
+    grid-row: 4/6;
+    height: 720px;
+    width: 350px;
+}
 .imgQua{
     width: 350px;
     height: 350px;
@@ -70,14 +75,103 @@
 .img6{
     grid-column: 3/4;
 }
-.img4{
-    grid-row: 4/6;
-    height: 720px;
-    width: 350px;
-}
 .img7{
     grid-column: 2/-1;
     grid-row: 5/6;
     width: 720px;
     height: 350px;
+}
+@media(max-width: 1100px){
+    .gridContainer1,
+    .gridContainer2{
+        grid-template-columns: 250px 250px 200px;
+    }
+    .img1,
+    .img2,
+    .img7{
+    width: 520px;
+    height: 200px;
+}
+    .img3,
+    .img4{
+    width: 250px;
+    height: 420px
+}
+.imgQua{
+    width: 250px;
+    height: 200px;
+}
+
+}
+@media(max-width: 900px){
+    .container{
+
+       padding: 40px;
+    }
+    .gridContainer1,
+    .gridContainer2{
+        grid-template-columns: 200px 200px 150px;
+    }
+    .img1,
+    .img2,
+    .img7{
+    width: 420px;
+    height: 150px;
+}
+    .img3,
+    .img4{
+    width: 200px;
+    height: 320px
+}
+.imgQua{
+    width: 200px;
+    height: 150px;
+}
+}
+@media(max-width: 700px){
+    .gridContainer1,
+    .gridContainer2{
+        grid-template-columns: 150px 150px 100px;
+        gap: .625rem;
+    }
+    .img1,
+    .img2,
+    .img7{
+    width: 310px;
+    height: 100px;
+}
+    .img3,
+    .img4{
+    width: 150px;
+    height: 210px
+}
+.imgQua{
+    width: 150px;
+    height: 100px;
+}
+}
+@media(max-width: 550px){
+    .container > h1{
+        font-size: 1.5rem;
+    }
+    .gridContainer1,
+    .gridContainer2{
+        grid-template-columns: 100px 100px 100px;
+        gap: .625rem;
+    }
+    .img1,
+    .img2,
+    .img7{
+    width: 210px;
+    height: 100px;
+}
+    .img3,
+    .img4{
+    width: 100px;
+    height: 210px
+}
+.imgQua{
+    width: 100px;
+    height: 100px;
+}
 }
