--- a/src/assets/components/Localizacao/Localizacao.module.css
+++ b/src/assets/components/Localizacao/Localizacao.module.css
@@ -18,7 +18,6 @@
 .container #map{
     width: 400px;
     height: 400px;
-    background-color: #FFC300;
     border-radius: 10px;
 }
 .funcionamento{
@@ -41,7 +40,27 @@
     margin-bottom: 20px;
 }
 .funcionamento dd i {
+    min-width: 100%;
     color: #FFC300;
     font-size: 2rem;
     text-align: center;
+}
+@media(max-width: 700px){
+    .container{
+        grid-template-columns: 1fr;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media(max-width: 550px){
+    .container h1{
+        font-size: 1.5rem;
+    }
+    .container #map{
+        width: 300px;
+        height: 300px;
+    }
+    .funcionamento dt{
+        font-size: 1rem;
+    }
 }
