--- a/src/components/Carrossel/Carrossel.module.css
+++ b/src/components/Carrossel/Carrossel.module.css
@@ -127,11 +127,12 @@
         font-size: 1.2rem;
     }
     .content{
-        padding: 50px 70px;
+        padding: 30px 50px;
     }
     .content > p{
-        font-size: .75rem;
-        width: 270px;
+        font-size: .625rem;
+        width: 250px;
+        line-height: 14px;
     }
     .carrosselContainer button i{
         font-size: 1rem;
@@ -139,3 +140,20 @@
 
 }
 
+@media(max-width: 350px){
+    .container h1{
+        font-size: 1rem;
+    }
+    .content{
+        padding: 20px 40px;
+    }
+    .content > p{
+        font-size: .625rem;
+        width: 230px;
+        
+    }
+    .carrosselContainer button i{
+        font-size: 1rem;
+    }
+
+}
