--- a/src/components/Contato/Contato.module.css
+++ b/src/components/Contato/Contato.module.css
@@ -3,7 +3,7 @@
     min-height: 100vh;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 40px 0px 40px 40px;
+    padding: 40px ;
     gap: 40px;
     background-color: #000;
     color: #fff;
@@ -18,4 +18,14 @@
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
+}
+@media(max-width: 800px){
+    .container {
+        grid-template-columns: 1fr;
+    }
+}
+@media(max-width: 500px){
+    .container {
+        padding: 20px;
+    }
 }
