--- a/src/components/Localizacao/Localizacao.module.css
+++ b/src/components/Localizacao/Localizacao.module.css
@@ -64,3 +64,9 @@
         font-size: 1rem;
     }
 }
+@media(max-width: 400px){
+    .container #map{
+        width: 250px;
+        height: 250px;
+    }
+}
