--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,6 @@
 .homeContainer{
     min-height: 100vh;
-    background-image: url('./public/bg-home.jpg');
+    background-image: url('/public/bg-home.jpg');
     background-size: cover;
     background-position: bottom;
     color: #fff;
